--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     I'm a Web Developer and ex-SEO/Digital Marketing Specialist based in Ho Chi Minh City, Vietnam and I love to create beautiful and functional websites.
                 </p>
                 <div class="btn-con">
-                    <a href="#contact" class="main-btn">
+                    <a href="https://aliciadang.github.io/index.html#contact" class="main-btn">
                         <span class="btn-text">HIRE ME </span>
                         <span class="btn-icon"><i class="fas fa-solid fa-arrow-right"></i></span>
                     </a>
@@ -236,9 +236,9 @@
                         <img src="img/port1.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>My Portfolio Website</h3>
+                        <h3>Portfolio Website</h3>
                         <div class="icon">
-                            <a href="google.com" target="_blank">
+                            <a href="https://github.com/aliciadang/aliciadang.github.io" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -249,9 +249,9 @@
                         <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>My Portfolio Website</h3>
+                        <h3>Color Flipper</h3>
                         <div class="icon">
-                            <a href="google.com" target="_blank">
+                            <a href="https://github.com/aliciadang/JSProjects/tree/master/color-flipper/final" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -262,9 +262,9 @@
                         <img src="img/port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>My Portfolio Website</h3>
+                        <h3>Filters</h3>
                         <div class="icon">
-                            <a href="google.com" target="_blank">
+                            <a href="https://github.com/aliciadang/JSProjects/tree/master/filters/final" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -275,9 +275,9 @@
                         <img src="img/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>My Portfolio Website</h3>
+                        <h3>Grocery Bud</h3>
                         <div class="icon">
-                            <a href="google.com" target="_blank">
+                            <a href="https://github.com/aliciadang/JSProjects/tree/master/grocery-bud/final" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -288,9 +288,9 @@
                         <img src="img/port5.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>My Portfolio Website</h3>
+                        <h3>Products</h3>
                         <div class="icon">
-                            <a href="google.com" target="_blank">
+                            <a href="https://github.com/aliciadang/JSProjects/tree/master/products/final" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -301,9 +301,9 @@
                         <img src="img/port6.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>My Portfolio Website</h3>
+                        <h3>Reviews</h3>
                         <div class="icon">
-                            <a href="google.com" target="_blank">
+                            <a href="https://github.com/aliciadang/JSProjects/tree/master/reviews/final" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -351,7 +351,7 @@
                             </div>
                         </div>
                         <div class="contact-cv">
-                            <a href="#contact" class="contact-btn">
+                            <a href="https://drive.google.com/file/d/11MQLGObFGVG7rmjHEaZEIOdBUeTLok3W/view" class="contact-btn">
                                 <span class="contact-btn-text">Download My Resume</span>
                             </a>
                         </div>
