--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
-                <img src="img/avatar1.png" alt="">
+                <img src="img/hero.png" alt="">
             </div>
             <div class="right-header">
                 <h1 class="name">
