--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     Hi, I'm <span>Alicia Dang</span>
                 </h1>
                 <p>
-                    I'm a Web Developer and ex-SEO/Digital Marketing Specialist based in Ho Chi Minh City, Vietnam and I love to create beautiful and functional websites.
+                    I'm a Web Developer and an ex-SEO Specialist based in Ho Chi Minh City, Vietnam and I love to create beautiful and functional websites.
                 </p>
                 <div class="btn-con">
-                    <a href="https://aliciadang.github.io/index.html#contact" class="main-btn">
+                    <a href="https://www.linkedin.com/in/uyendnn/" target="_blank" class="main-btn">
                         <span class="btn-text">HIRE ME </span>
                         <span class="btn-icon"><i class="fas fa-solid fa-arrow-right"></i></span>
                     </a>
@@ -145,11 +145,11 @@
                     </div>
                     <div class="education-item">
                         <p class="ed-duration">2022 - 2024</p>
-                        <h5>University of Information Technology - Viet Nam National University HCMC</h5>
+                        <h5>VNUHCM – University of Information Technology</h5>
                         <p class="ed-degree">Bachelor of Information Technology</p>
                     </div>
                     <div class="education-item">
-                        <p class="ed-duration">2013 - 2017</p>
+                        <p class="ed-duration">2012 - 2017</p>
                         <h5>University of Finance and Marketing</h5>
                         <p class="ed-degree">Bachelor of Business Administration</p>
                     </div>
@@ -166,13 +166,14 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">Feb 2021 - Present</p>
-                    <h5>Senior SEO Specialist<span> - BatDongSan.Com.Vn – PropertyGuru Vietnam
+                    <h5>Senior SEO SpeciaIist<span> - BatDongSan.Com.Vn – PropertyGuru Vietnam
                     </span></h5>
                     <ul>
-                        <li>- Manage all SEO activities for the main site as well as maintain & strengthen company’s satelite websites.</li>
-                        <li>- Work with other internal teams: performance, content, brand, product to ensure SEO best practices are properly implemented.</li>
-                        <li>- Track, report and analyze website analytics and initiatives and campaigns</li>
-                        <li>- Provide a holistic analysis of customer behavior and website experience thus increasing organic traffic & conversion ratios.</li>
+                        <li>- Supported the development team with website launches and migrations (redirect strategies, content migration, crawl-
+                            budget optimisation, Javascript/CSS/HTML optimization to reach Google Core Web Vitals standards).</li>
+                        <li>- Worked with other internal teams to ensure SEO best practices are properly implemented.</li>
+                        <li>- Tracked, reported and analyzed website analytics and initiatives and campaigns.</li>
+                        <li>- Managed all SEO activities for the main site as well as maintain & strengthen company’s satelite web system.</li>
                     </ul>
                 </div>
                 <div class="timeline-item">
@@ -180,13 +181,13 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">Apr 2019 – Apr 2021</p>
-                    <h5>SEO Specialist<span> - Clever Pro</span></h5>
+                    <h5>SEO and Web SpeciaIist<span> - Clever Pro</span></h5>
                     <ul>
-                        <li>- Implemented SEO organic strategy which boosted sites visits by 200% in 8
-                            months while increasing total sales by 300%.</li>
-                        <li>- Led a 6 person team to produce 50 articles and obtain an average of 100
-                            quality backlinks per week, shaped Corporate & Product Brands</li>
-                        <li>- Developed social media & Paid strategies which increased sales by 500%</li>
+                        <li>- Developed websites and optimizaed Mobile Responsive User Experience with CSS and other Wordpress theme/builder
+                            (Flatsome, Avada, Elementor..) to the website on any device with primary use on mobile.</li>
+                        <li>- Learned multiple threading, concurrency, design patterns and their impacts on application concurrency.</li>
+                        <li>- Led a team with 6 person and monitored SEO - social media campaigns to grow target platform by 10k sessions in less
+                            than a year.</li>
                     </ul>
                 </div>
                 <div class="timeline-item">
@@ -194,19 +195,12 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">Apr 2018 – Apr 2019</p>
-                    <h5>SEO Project Manager<span> - GTVSEO</span></h5>
+                    <h5>SEO Project Management<span> - GTVSEO</span></h5>
                     <ul>
-                        <li>- Hands on experience in Ecommerce, Travel, Healthcare, Beauty, Law - Legal and
-                            other Professional Services website/business</li>
-                        <li>- Coordinated a team with 4 person to be in top 1-10 SERP for medium & high
-                            competitive keywords within 4-12 months</li>
-                        <li>- Implemented SEO-driven organic strategy that boosted all websites’s visits
-                            from 30% - 300% within 4-12 months while increasing total leads by 15% - 70%.</li>
-                        <li>- Improved website’s performance, reshaped brands, images, layouts and
-                            functions</li>
-                        <li>- Helped to build social viral & seeding activities, redesign landing pages
-                            (especially for Ecommerce - Professional services) to drive sales and conducted
-                            Paid campaigns such like: Adwords, GDN, Facebook, Zalo, Coccoc, Youtube etc</li>
+                        <li>- Created and developed websites using Wordpress CMS</li>
+                        <li>- Provided holistic analyses of customer and website UX/UI thus increasing organic traffic & conversion ratios.</li>
+                        <li>- Coordinated a team with 4 person to be in top 1-10 SERP for medium & high competitive keywords within 4-12 months.</li>
+                        <li>- Implemented SEO-driven organic strategy that boosted all websites’s visits.</li>
                     </ul>
                 </div>
                 <div class="timeline-item">
@@ -351,7 +345,7 @@
                             </div>
                         </div>
                         <div class="contact-cv">
-                            <a href="https://drive.google.com/file/d/11MQLGObFGVG7rmjHEaZEIOdBUeTLok3W/view" class="contact-btn">
+                            <a href="https://drive.google.com/file/d/1V9aSkBz0xUO6xz8YrQ-e91G-wqxyVqmF/view" target="_blank" class="contact-btn">
                                 <span class="contact-btn-text">Download My Resume</span>
                             </a>
                         </div>
